# OpsCenter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: docker-build.yml  nginx-config.yml
backend/: __init__.py  moving.py
downloads/: autoinstall.yaml
frontend/static/: card.css  home.css
frontend/templates/: ansible.html  card.html  docker.html  index.html
nginx/: nginx.conf  nginxwithips.txt
workflows/: docker-build.yml  nginx-config.yml
